syntax = "proto3";

package org.hse.torrent.services.api;


service PeerToPeerService {
  /* STAT -- доступные для раздачи части определенного файла */
  rpc getFilePartitioningInfo (GetFilePartitioningInfoRequest) returns (GetFilePartitioningInfoResponse);
  /* GET -- скачивание части определенного файла */
  rpc getFilePart (GetFilePartRequest) returns (GetFilePartResponse);
}

/* STAT */
message GetFilePartitioningInfoRequest {
  //    <1: Byte> <id: Int>,
  int32 fileId = 1;  //идентификатор файла
}

message GetFilePartitioningInfoResponse {
  //    <count: Int> (<part: Int>)*,
  repeated int32  part = 1; //номер части
}


/* GET */
message GetFilePartRequest {
  //    <2: Byte> <id: Int> <part: Int>
  int32 fileId = 1; //идентификатор файла,
  int32 partIndex = 2; //номер части
}

message GetFilePartResponse {
  //    <content: Bytes>,
  bytes  content = 1;//содержимое части
}
