syntax = "proto3";

package org.hse.torrent.services;
import "google/protobuf/empty.proto";

service ServerService {
  rpc listQuery (google.protobuf.Empty) returns (stream SharedFileMetadataResponse);
  rpc sourcesQuery (sourcesQueryRequest) returns (stream SourcesQueryResponse);
  rpc updateQuery (updateQueryRequest) returns (google.protobuf.Empty);
  rpc uploadQuery (uploadQueryRequest) returns (uploadQueryResponse);
}


message SharedFileMetadataResponse {
  //    <count: Int> (<id: Int> <name: String> <size: Long>)*,
  int32 fileId = 2;  //идентификатор файла
  string name = 3; //название файла
  int64  size = 4; //размер файла
}

message sourcesQueryRequest {
  //    <3: Byte> <id: Int>,
  int32 fileId = 1;  //идентификатор файла
}

message SourcesQueryResponse {
  //    <size: Int> (<ip: ByteByteByteByte> <clientPort: Short>)*,
  string  ip = 1; //ip клиента,
  string  clientPort = 2; //порт клиента
}

message updateQueryRequest {
  //    <4: Byte> <clientPort: Short> <count: Int> (<id: Int>)*,
  string clientPort = 1; //порт клиента,
  string ip = 2;
  repeated int32 fileId = 3; //идентификатор файла
}

message uploadQueryRequest {
  //    <2: Byte> <name: String> <size: Long>,
  string name = 1; //название файла
  int64  size = 2; //размер файла
}

message uploadQueryResponse {
  //    <id: Int>,
  int32 fileId = 1;  //идентификатор файла
}
